# booky

./: .gitignore  CMakeLists.txt  readme.md
src/: main.cpp
src/cpp/: appstate.hpp  main.cpp  pythonmodules.hpp
src/cpp/pdfselection/: sharedtypes.hpp
src/cpp/threads/: assistantresponsegenerator.cpp  assistantresponsegenerator.hpp  databasecreator.cpp  databasecreator.hpp  pixmapcreator.cpp  pixmapcreator.hpp  tempconsts.hpp
src/cpp/ui/: assistant.cpp  assistant.hpp  chat.cpp  chat.hpp  chatmessage.hpp  contextmenu.cpp  contextmenu.hpp  documentview.cpp  documentview.hpp  mainwindow.cpp  mainwindow.hpp  page.hpp  pagescontainer.cpp  pagescontainer.hpp  toptoolbar.cpp  toptoolbar.hpp
src/cpp/ui/widgets/: assistant.cpp  assistant.hpp  assistantchatmessage.hpp  chat.cpp  configurator.cpp  configurator.hpp  mainwindow.cpp  mainwindow.hpp  messageinput.cpp  messageinput.hpp  page.hpp  pagescontainer.cpp  pagescontainer.hpp  toptoolbar.cpp  toptoolbar.hpp  userchatmessage.hpp
src/pdf/: pageselection.cpp  pageselection.hpp
src/pdfselection/: pageselection.cpp  pageselection.hpp
src/python/knowledgebase/: kb.py
src/ui/: documentview.cpp  documentview.hpp  mainwindow.cpp  page.cpp  page.hpp  pagescontainer.cpp  pagescontainer.hpp  pdfpage.cpp  pdfpage.hpp  pdfview.cpp  pdfview.hpp  toptoolbar.hpp
src/ui/threads/: pixmapcreator.cpp  pixmapcreator.hpp
